# granges

./: Cargo.toml  README.md
.github/workflows/: rust.yml
additional_benchmarks/: README.md  Snakefile  requirements.txt
additional_benchmarks/rscripts/: plyranges_join_overlap_inner.r  plyranges_map.r
benches/: bedtools_comparison.rs  io.rs
examples/: mean_score.rs  weighted_mean.rs
scripts/: benchmark_summary.py  seed_grinder.sh
src/: commands.rs  error.rs  granges.rs  iterators.rs  join.rs  lib.rs  merging_iterators.rs  reporting.rs  test_utilities.rs  traits.rs  unique_id.rs
src/data/: mod.rs  ndarray.rs  operations.rs  vec.rs
src/io/: file.rs  io.rs  mod.rs  noodles.rs  parsers.rs  tsv.rs
src/io/parsers/: bed.rs  detect.rs  filters.rs  mod.rs  tsv.rs  utils.rs
src/io/parsers/bed/: bed3.rs  bed4.rs  bed5.rs  bedlike.rs  mod.rs
src/main/: commands.rs  mod.rs  reporting.rs
src/ranges/: coitrees.rs  mod.rs  operations.rs  vec.rs
src/sequences/: lazy.rs  mod.rs  nucleotide.rs  numeric.rs
tests/: bedtools_validation.rs
tests_data/: example.bed  example_bedlike.tsv  invalid.bed  invalid_format.bed  noodles_example.bed  test_case_01.bed  test_case_03.bed
tests_data/sequences/: Makefile  small.fa.gz.fai  test_case_01.fa  test_case_01.fa.gz.fai
