[package]
name = "granges"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Vince Buffalo <vsbuffalo@gmail.com>"]
keywords = ["genomics", "bioinformatics", "compbio"]
categories = ["science"]
documentation = "https://docs.rs/granges/"
repository = "https://github.com/vsbuffalo/granges"
description = "A Rust library and command line tool for genomic range operations."

[dependencies]
# clap = { version = "4.4.18", features = ["derive"], optional = true }
clap = { version = "4.4.18", features = ["derive"] }
coitrees = { version = "0.4.0", features = ["nosimd"] }
flate2 = "1.0.28"
genomap = "0.2.6"
indexmap = "2.2.3"
ndarray = "0.15.6"
noodles = { version = "0.63.0", features = ["core", "bed"] }
rand = "0.8.5"
thiserror = "1.0.57"

[features]
# cli = [ "clap" ] // TODO make feature
dev-commands = [ ]

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1

[[bin]]
name = "granges"
path = "src/main/mod.rs"

[dev-dependencies]
tempfile = "3.10.0"



