[package]
name = "granges"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Vince Buffalo <vsbuffalo@gmail.com>"]
keywords = ["genomics", "bioinformatics", "compbio"]
categories = ["science"]
documentation = "https://docs.rs/granges/"
repository = "https://github.com/vsbuffalo/granges"
description = "A Rust library and command line tool for genomic range operations."

[dependencies]
# clap = { version = "4.4.18", features = ["derive"], optional = true }
clap = { version = "4.4.18", features = ["derive"] }
coitrees = { version = "0.4.0", features = ["nosimd"] }
flate2 = "1.0.28"
genomap = "0.2.6"
indexmap = "2.2.3"
ndarray = { version = "0.15.6", optional = true}
noodles = { version = "0.63.0", features = ["core", "bed", "fasta"] }
rand = "0.8.5"
tempfile = "3.10.0"
thiserror = "1.0.57"
polars = { version = "0.37.0", optional = true }
bytes = "1.5.0"
ndarray-npy = { version = "0.8.1", optional = true }
num-traits = "0.2.18"
lazy_static = "1.4.0"
medians = "3.0.6"

[features]
# cli = [ "clap" ]  # TODO make feature
dev-commands = [ ]
test_bigranges = [] # NOTE: not used yet, for tests on large files
polars = ["dep:polars"]
ndarray = ["dep:ndarray", "dep:ndarray-npy"]
big-position = []

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1

[[bin]]
name = "granges"
path = "src/main/mod.rs"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bedtools_comparison"
harness = false

